syntax = "proto3";

package auth;

option go_package = "auth/proto;authpb";

message UserData {
  string login = 1;
  string password = 2;
}

message DoctorRegisterResponse {
  int32 user_id = 1;
  string error = 2;
}

message DoctorData {
  string first_name = 1;
  string second_name = 2;
  string surname = 3;
  string phone_number = 4;
  string email = 5;
  string education = 6;
  int32 experience = 7;
  string gender = 8;
}

message DoctorRegisterRequest {
  UserData user = 1;
  DoctorData doctor = 2;
}

service AuthService {
  rpc DoctorRegister(DoctorRegisterRequest) returns (DoctorRegisterResponse);
}
